--- a/index.html
+++ b/index.html
@@ -13,11 +13,129 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow">
+    <style type="text/css">
+        body{
+            font-family: Arial Narrow, sans-serif;
+            color: rgb(32, 56, 100);
+        }
+        .title{
+            background-color: rgb(222, 235, 247);
+            width: 100%;
+            height: 30px;
+        }
+        .logo{ text-align: center; }
 
+        .top_option_item{
+            float: left;
+            margin-right: 50px;
+            list-style: none;
+        }
+        .left_option_item{
+            margin-right: 50px;
+            list-style: none;
+        }
+        .left_navbar{
+            position: relative;
+            left: 100px;
+            top: 50px;
+        }
+        .search {
+            float: right;
+            border-bottom: 1px solid black;
+        }
+        .search input {
+            color: #545050;
+            font-size: 15px;
+            outline: none;
+            padding: 3px 5px 3px 20px;
+            border: none;
+        }
+    </style>
 </head>
 
 <body>
 
+    <div class="header">
+        <div class="title">
+            <table style="width: 90%; ">
+                <tbody style="float: right;">
+                    <tr>
+                        <td>LOGIN</td>
+                        <td>/</td>
+                        <td>BAG</td>
+                    </tr>
+                </tbody>
+            </table>        
+        </div>
+
+        <div class="logo"> <img src="logo.png"> </div>
+  
+        <nav class="navbar navbar-expand-lg rounded" aria-label="Twelfth navbar example">
+
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+    
+                <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
+                    <ul class="top_option_nav">
+                        <li class="top_option_item">
+                            <a class="nav-link" href="#"> NEW </a>
+                        </li>
+                        <li class="top_option_item">
+                            <a class="nav-link" href="#"> BOOKS </a>
+                        </li>
+                        <li class="top_option_item">
+                            <a class="nav-link"  href="#"> CLOTHES </a>
+                        </li>
+                        <li class="top_option_item">
+                            <a class="nav-link "  href="#"> 3C </a>
+                        </li>
+                        <li class="top_option_item">
+                            <a class="nav-link "  href="#"> SALE </a>
+                        </li>
+                        <li class="search" style="list-style: none;">
+                            <form>
+                                <input id="keyWord" type="text" placeholder="SEARCH">
+                            </form>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>    
+
+    </div>
+    
+    <div class="main">
+
+        <div style="width:1200px;margin:0px auto;"></div>
+
+        <div class="left_navbar">
+
+            <ul class="left_option_nav">
+                <li class="left_option_item">
+                    <a class="nav-link" href="#"> NEW </a>
+                </li>
+                <li class="left_option_item">
+                    <a class="nav-link" href="#"> BOOKS </a>
+                </li>
+                <li class="left_option_item">
+                    <a class="nav-link"  href="#"> CLOTHES </a>
+                </li>
+                <li class="left_option_item">
+                    <a class="nav-link "  href="#"> 3C </a>
+                </li>
+                <li class="left_option_item">
+                    <a class="nav-link "  href="#"> SALE </a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+
+   
 </body>
 
 </html>
