--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
     <div class="header">
         <div class="title">
-            <table style="width: 90%; ">
+            <table style="width: 90%; display:block;" >
                 <tbody style="float: right;">
                     <tr>
-                        <td>LOGIN</td>
+                        <td onclick="location.href='login.html'"><a href="login.html">LOGIN</a></td>
                         <td>/</td>
                         <td>BAG</td>
                     </tr>
