--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 
     <link rel="stylesheet" href="css/index.css">
+    <script type="text/javascript" src="script/index.js"></script>
     <script src="script/index.js"></script>
 </head>
 
