--- a/index.html
+++ b/index.html
@@ -1,109 +1,319 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
+	<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Shop &mdash; Free Website Template, Free HTML5 Template by gettemplates.co</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
+	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="author" content="gettemplates.co" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<!-- 
+	//////////////////////////////////////////////////////
 
-    <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <!-- BootStrap -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+	FREE HTML5 TEMPLATE 
+	DESIGNED & DEVELOPED by FreeHTML5.co
+		
+	Website: 		http://freehtml5.co/
+	Email: 			info@freehtml5.co
+	Twitter: 		http://twitter.com/fh5co
+	Facebook: 		https://www.facebook.com/fh5co
 
-    <link rel="stylesheet" type="text/css" href="https://fonts.google.com/specimen/Patrick+Hand">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow">
+	//////////////////////////////////////////////////////
+	 -->
 
+  	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content=""/>
+	<meta property="og:image" content=""/>
+	<meta property="og:url" content=""/>
+	<meta property="og:site_name" content=""/>
+	<meta property="og:description" content=""/>
+	<meta name="twitter:title" content="" />
+	<meta name="twitter:image" content="" />
+	<meta name="twitter:url" content="" />
+	<meta name="twitter:card" content="" />
 
-    <link rel="stylesheet" href="css/index.css">
-    <script type="text/javascript" src="script/index.js"></script>
-    <script src="script/index.js"></script>
-</head>
+	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> -->
+	<!-- <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet"> -->
+	
+	<!-- Animate.css -->
+	<link rel="stylesheet" href="css/animate.css">
+	<!-- Icomoon Icon Fonts-->
+	<link rel="stylesheet" href="css/icomoon.css">
+	<!-- Bootstrap  -->
+	<link rel="stylesheet" href="css/bootstrap.css">
 
-<body>
+	<!-- Flexslider  -->
+	<link rel="stylesheet" href="css/flexslider.css">
 
-    <div class="header">
-        <div class="title">
-            <table style="width: 90%; display:block;">
-                <tbody style="float: right;">
-                    <tr>
-                        <td onclick="location.href='login.html'"><a href="login.html">LOGIN</a></td>
-                        <td>/</td>
-                        <td>BAG</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+	<!-- Owl Carousel  -->
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 
-        <div class="logo"> <img src="source/logo.png"> </div>
+	<!-- Theme style  -->
+	<link rel="stylesheet" href="css/style.css">
 
-        <nav class="navbar navbar-expand-lg rounded" aria-label="Twelfth navbar example">
+	<!-- Modernizr JS -->
+	<script src="js/modernizr-2.6.2.min.js"></script>
+	<!-- FOR IE9 below -->
+	<!--[if lt IE 9]>
+	<script src="js/respond.min.js"></script>
+	<![endif]-->
 
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+	</head>
+	<body>
+		
+	<div class="fh5co-loader"></div>
+	
+	<div id="page">
 
-                <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
-                    <ul class="top_option_nav">
-                        <li class="top_option_item">
-                            <a class="nav-link" href="#"> NEW </a>
-                        </li>
-                        <li class="top_option_item">
-                            <a class="nav-link" href="#"> BOOKS </a>
-                        </li>
-                        <li class="top_option_item">
-                            <a class="nav-link" href="#"> CLOTHES </a>
-                        </li>
-                        <li class="top_option_item">
-                            <a class="nav-link " href="#"> 3C </a>
-                        </li>
-                        <li class="top_option_item">
-                            <a class="nav-link " href="#"> SALE </a>
-                        </li>
-                        <li class="search" style="list-style: none;">
-                            <form>
-                                <input id="keyWord" type="text" placeholder="SEARCH">
-                            </form>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+	<nav class="fh5co-nav" role="navigation">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3 col-xs-2">
+					<div id="fh5co-logo"><a href="test.html" style="padding: 0;">NTOU's shop!</a></div>
+				</div>
+				<div class="col-md-6 col-xs-6 text-center menu-1">
+					<ul>
+						<li><a href="">New</a></li>
+						<li><a href="">Book</a></li>
+						<li><a href="">Clothes</a></li>
+						<li><a href="">3C</a></li>
+						<li><a href="">Sale</a></li> 
 
-    </div>
+                        <li class="has-dropdown">
+							<a href="">Member</a>
+							<ul class="dropdown">
+                                <li><a href="login.html">Sign in/out</a></li>
+								<li><a href="#">訂單查詢</a></li>
+								<li><a href="#">上架商品</a></li>
+								<li><a href="#">我的商品</a></li>
+								<li><a href="#">個人資料</a></li>
+                                <li><a href="#">聊天室</a></li>
+							</ul>
+						</li>
 
-    <div class="main">
+					</ul>
+				</div>
+				<div class="col-md-3 col-xs-4 text-right hidden-xs menu-2">
+					<ul>
+						<li class="search">
+							<div class="input-group">
+						      <input type="text" placeholder="Search..">
+						      <span class="input-group-btn">
+						        <button class="btn btn-primary" type="button"><i class="icon-search"></i></button>
+						      </span>
+						    </div>
+						</li>
+						<li class="shopping-cart"><a href="#" class="cart"><span><small>0</small><i class="icon-shopping-cart"></i></span></a></li>
+					</ul>
+				</div>
+			</div>
+			
+		</div>
+	</nav>
 
-        <div style="width:1200px;margin:0px auto;"></div>
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/sea.jpg);">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center">
+					<div class="display-t">
+						<div class="display-tc animate-box" data-animate-effect="fadeIn">
+							<h1>All Product</h1>
+							<h2>National Taiwan Ocean University</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	
+	<div id="fh5co-product">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<span>Second Hand Product</span>
+					<p>購買前請三思，二手商品售出後無法退貨</p>
+				</div>
+			</div>
 
-        <div class="left_navbar">
+			<div class="row">
+				<div class="col-md-4 text-center animate-box">
+					<div class="product">
+						<div class="product-grid" style="background-image:url(images/product-1.jpg);">
+							<div class="inner">
+								<p>
+									<a href="single.html" class="icon"><i class="icon-shopping-cart"></i></a>
+									<a href="single.html" class="icon"><i class="icon-eye"></i></a>
+								</p>
+							</div>
+						</div>
+						<div class="desc">
+							<h3><a href="single.html">資工系大一用書-計算機概論2020</a></h3>
+							<span class="price">$350</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 text-center animate-box">
+					<div class="product">
+						<div class="product-grid" style="background-image:url(images/product-2.jpg);">
+							<div class="inner">
+								<p>
+									<a href="single.html" class="icon"><i class="icon-shopping-cart"></i></a>
+									<a href="single.html" class="icon"><i class="icon-eye"></i></a>
+								</p>
+							</div>
+						</div>
+						<div class="desc">
+							<h3><a href="single.html">多益單字大全</a></h3>
+							<span class="price">$600</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 text-center animate-box">
+					<div class="product">
+						<div class="product-grid" style="background-image:url(images/product-3.jpg);">
+							<div class="inner">
+								<p>
+									<a href="single.html" class="icon"><i class="icon-shopping-cart"></i></a>
+									<a href="single.html" class="icon"><i class="icon-eye"></i></a>
+								</p>
+							</div>
+						</div>
+						<div class="desc">
+							<h3><a href="single.html">資工大二用書-資料結構(英)</a></h3>
+							<span class="price">$400</span>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 text-center animate-box">
+					<div class="product">
+						<div class="product-grid" style="background-image:url(images/product-4.jpg);">
+							<div class="inner">
+								<p>
+									<a href="single.html" class="icon"><i class="icon-shopping-cart"></i></a>
+									<a href="single.html" class="icon"><i class="icon-eye"></i></a>
+								</p>
+							</div>
+						</div>
+						<div class="desc">
+							<h3><a href="single.html">C++教學手冊</a></h3>
+							<span class="price">$800</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 text-center animate-box">
+					<div class="product">
+						<div class="product-grid" style="background-image:url(images/product-5.jpg);">
+							<div class="inner">
+								<p>
+									<a href="single.html" class="icon"><i class="icon-shopping-cart"></i></a>
+									<a href="single.html" class="icon"><i class="icon-eye"></i></a>
+								</p>
+							</div>
+						</div>
+						<div class="desc">
+							<h3><a href="single.html">丹尼爾伍德-Amical1</a></h3>
+							<span class="price">$250</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 text-center animate-box">
+					<div class="product">
+						<div class="product-grid" style="background-image:url(images/product-6.jpg);">
+							<div class="inner">
+								<p>
+									<a href="single.html" class="icon"><i class="icon-shopping-cart"></i></a>
+									<a href="single.html" class="icon"><i class="icon-eye"></i></a>
+								</p>
+							</div>
+						</div>
+						<div class="desc">
+							<h3><a href="single.html">資工大一用書-Digital Design</a></h3>
+							<span class="price">$300</span>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 text-center animate-box">
+					<div class="product">
+						<div class="product-grid" style="background-image:url(images/product-7.jpg);">
+							<div class="inner">
+								<p>
+									<a href="single.html" class="icon"><i class="icon-shopping-cart"></i></a>
+									<a href="single.html" class="icon"><i class="icon-eye"></i></a>
+								</p>
+							</div>
+						</div>
+						<div class="desc">
+							<h3><a href="single.html">資工大二用書-自算機組織學</a></h3>
+							<span class="price">$750</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 text-center animate-box">
+					<div class="product">
+						<div class="product-grid" style="background-image:url(images/product-8.jpg);">
+							<div class="inner">
+								<p>
+									<a href="single.html" class="icon"><i class="icon-shopping-cart"></i></a>
+									<a href="single.html" class="icon"><i class="icon-eye"></i></a>
+								</p>
+							</div>
+						</div>
+						<div class="desc">
+							<h3><a href="single.html">資工大一用書-微積分</a></h3>
+							<span class="price">$200</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 text-center animate-box">
+					<div class="product">
+						<div class="product-grid" style="background-image:url(images/product-9.jpg);">
+							<div class="inner">
+								<p>
+									<a href="single.html" class="icon"><i class="icon-shopping-cart"></i></a>
+									<a href="single.html" class="icon"><i class="icon-eye"></i></a>
+								</p>
+							</div>
+						</div>
+						<div class="desc">
+							<h3><a href="single.html">工程數學</a></h3>
+							<span class="price">$600</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
 
-            <ul class="left_option_nav">
-                <li class="left_option_item">
-                    <a class="nav-link" href="#"> NEW </a>
-                </li>
-                <li class="left_option_item">
-                    <a class="nav-link" href="#"> BOOKS </a>
-                </li>
-                <li class="left_option_item">
-                    <a class="nav-link" href="#"> CLOTHES </a>
-                </li>
-                <li class="left_option_item">
-                    <a class="nav-link " href="#"> 3C </a>
-                </li>
-                <li class="left_option_item">
-                    <a class="nav-link " href="#"> SALE </a>
-                </li>
+	<div class="gototop js-top">
+		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+	</div>
+	
+	<!-- jQuery -->
+	<script src="js/jquery.min.js"></script>
+	<!-- jQuery Easing -->
+	<script src="js/jquery.easing.1.3.js"></script>
+	<!-- Bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Waypoints -->
+	<script src="js/jquery.waypoints.min.js"></script>
+	<!-- Carousel -->
+	<script src="js/owl.carousel.min.js"></script>
+	<!-- countTo -->
+	<script src="js/jquery.countTo.js"></script>
+	<!-- Flexslider -->
+	<script src="js/jquery.flexslider-min.js"></script>
+	<!-- Main -->
+	<script src="js/main.js"></script>
 
-            </ul>
-        </div>
-    </div>
-
-
-</body>
-
+	</body>
 </html>
+
