--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>海大拍賣系統</title>
+    <title>login</title>
 
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
@@ -16,6 +16,8 @@
 
     <link rel="stylesheet" href="css/login.css">
     <script src="script/login.js"></script>
+    <script src="script/index.js"></script>
+
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -80,12 +82,12 @@
 </head>
 
 <body>
-
+    
     <nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-xs-2">
-					<div id="fh5co-logo"><a href="test.html" style="padding: 0;">NTOU's shop!</a></div>
+					<div id="fh5co-logo"><a href="index.html" style="padding: 0;">NTOU's shop!</a></div>
 				</div>
 				<div class="col-md-6 col-xs-6 text-center menu-1">
 					<ul>
@@ -96,9 +98,9 @@
 						<li><a href="">Sale</a></li> 
 
                         <li class="has-dropdown">
-							<a href="">Member</a>
+							<a href="" id="logoName">Member</a>
 							<ul class="dropdown">
-                                <li><a href="login.html">Sign in/out</a></li>
+                                <li><a>Sign in/out</a></li>
 								<li><a href="#">訂單查詢</a></li>
 								<li><a href="#">上架商品</a></li>
 								<li><a href="#">我的商品</a></li>
@@ -126,6 +128,39 @@
 			
 		</div>
 	</nav>
+
+    <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/sea.jpg); margin-bottom: 30px;">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center">
+					<div class="display-t">
+						<div class="display-tc animate-box" data-animate-effect="fadeIn">
+							<h1>Sign in or Join us</h1>
+							<h2>National Taiwan Ocean University</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	
+	<!-- jQuery -->
+	<script src="js/jquery.min.js"></script>
+	<!-- jQuery Easing -->
+	<script src="js/jquery.easing.1.3.js"></script>
+	<!-- Bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Waypoints -->
+	<script src="js/jquery.waypoints.min.js"></script>
+	<!-- Carousel -->
+	<script src="js/owl.carousel.min.js"></script>
+	<!-- countTo -->
+	<script src="js/jquery.countTo.js"></script>
+	<!-- Flexslider -->
+	<script src="js/jquery.flexslider-min.js"></script>
+	<!-- Main -->
+	<script src="js/main.js"></script>
 
     <div class="container" style="margin-top: 50px;">
         <div class="row">
