--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<script src="script/index.js"></script>
+	<script src="script/showProduct.js"></script>
 
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
@@ -141,7 +141,7 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row" id="showProduct">
 				<div class="col-md-4 text-center animate-box">
 					<div class="product">
 						<div class="product-grid" style="background-image:url(images/product-1.jpg);">
@@ -295,10 +295,6 @@
 	</div>
 	</div>
 
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-	</div>
-	
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
