--- a/login.html
+++ b/login.html
@@ -16,7 +16,6 @@
 
     <link rel="stylesheet" href="css/login.css">
     <script src="script/login.js"></script>
-    <script src="script/index.js"></script>
 
 
         <meta charset="utf-8">
@@ -74,6 +73,8 @@
     
         <!-- Modernizr JS -->
         <script src="js/modernizr-2.6.2.min.js"></script>
+        <script src="script/index.js"></script>
+
         <!-- FOR IE9 below -->
         <!--[if lt IE 9]>
         <script src="js/respond.min.js"></script>
@@ -144,23 +145,6 @@
 			</div>
 		</div>
 	</header>
-	
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Carousel -->
-	<script src="js/owl.carousel.min.js"></script>
-	<!-- countTo -->
-	<script src="js/jquery.countTo.js"></script>
-	<!-- Flexslider -->
-	<script src="js/jquery.flexslider-min.js"></script>
-	<!-- Main -->
-	<script src="js/main.js"></script>
 
     <div class="container" style="margin-top: 50px;">
         <div class="row">
@@ -185,7 +169,56 @@
                 </div>
             
         </div>
+        <!--
+            <div id="fh5co-product">
+                <div class="container">
+                    <div class="row animate-box">
+                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+                            <span>Second Hand Product</span>
+                            <p>購買前請三思，二手商品售出後無法退貨</p>
+                        </div>
+                    </div>
+                    <div class="row" id="showProduct">
+                        <div class="col-md-4 text-center animate-box">
+                            <div class="product">
+                                <div class="product-grid" style="background-image:url(images/product-7.jpg);">
+                                    <div class="inner">
+                                        <p>
+                                            <a href="single.html" class="icon"><i class="icon-shopping-cart"></i></a>
+                                            <a href="single.html" class="icon"><i class="icon-eye"></i></a>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="desc">
+                                    <h3><a href="single.html">資工大二用書-自算機組織學</a></h3>
+                                    <span class="price">$750</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>            
+        -->
     </div>
+
+
+
+    	<!-- jQuery -->
+	<script src="js/jquery.min.js"></script>
+	<!-- jQuery Easing -->
+	<script src="js/jquery.easing.1.3.js"></script>
+	<!-- Bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Waypoints -->
+	<script src="js/jquery.waypoints.min.js"></script>
+	<!-- Carousel -->
+	<script src="js/owl.carousel.min.js"></script>
+	<!-- countTo -->
+	<script src="js/jquery.countTo.js"></script>
+	<!-- Flexslider -->
+	<script src="js/jquery.flexslider-min.js"></script>
+	<!-- Main -->
+	<script src="js/main.js"></script>
 
 </body>
 
