增加判斷是否登入功能 & 顯示商品前後整合

--- a/login.html
+++ b/login.html
@@ -99,9 +99,9 @@
 						<li><a href="">Sale</a></li> 
 
                         <li class="has-dropdown">
-							<a href="" id="logoName">Member</a>
+							<a href="" id="logoName"></a>
 							<ul class="dropdown">
-                                <li><a>Sign in/out</a></li>
+                                <li><a href="login.html">Sign in/out</a></li>
 								<li><a href="#">訂單查詢</a></li>
 								<li><a href="#">上架商品</a></li>
 								<li><a href="#">我的商品</a></li>
