--- a/chatroom.html
+++ b/chatroom.html
@@ -3,72 +3,45 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Shop</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="gettemplates.co" />
-
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
-	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> -->
-	<!-- <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet"> -->
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
-
-	<!-- Flexslider  -->
-	<link rel="stylesheet" href="css/flexslider.css">
-
-	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style.css">
-
-	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	<script src="script/index.js"></script>
-
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+	<title>chatroom</title>
+	 <!-- jquery -->
+	 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+	 <!-- BootStrap -->
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+	 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+ 
+	 <meta charset="utf-8">
+	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
+	 <meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
+	 <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	 <meta name="author" content="gettemplates.co" />
+	 
+	 <!-- Animate.css -->
+	 <link rel="stylesheet" href="css/animate.css">
+	 <!-- Icomoon Icon Fonts-->
+	 <link rel="stylesheet" href="css/icomoon.css">
+	 <!-- Bootstrap  -->
+	 <link rel="stylesheet" href="css/bootstrap.css">
+ 
+	 <!-- Flexslider  -->
+	 <link rel="stylesheet" href="css/flexslider.css">
+ 
+	 <!-- Owl Carousel  -->
+	 <link rel="stylesheet" href="css/owl.carousel.min.css">
+	 <link rel="stylesheet" href="css/owl.theme.default.min.css">
+ 
+	 <!-- Theme style  -->
+	 <link rel="stylesheet" href="css/style.css">
+ 
+	 <!-- Modernizr JS -->
+	 <script src="js/modernizr-2.6.2.min.js"></script>
+	 <script src="script/index.js"></script>
 
 	</head>
 	<body>
 		
-	<div class="fh5co-loader"></div>
-	
-	<div id="page">
 
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
@@ -84,15 +57,15 @@
 						<li><a href="">3C</a></li>
 						<li><a href="">Sale</a></li> 
 
-                        <li class="has-dropdown">
-							<a href="" id="logo_name">Member</a>
+						<li class="has-dropdown">
+							<a href="" id="logoName"></a>
 							<ul class="dropdown">
-                                <li><a>Sign in/out</a></li>
-								<li><a href="#">訂單查詢</a></li>
-								<li><a href="#">上架商品</a></li>
-								<li><a href="#">我的商品</a></li>
+								<li><a href="login.html" id="in_out">Sign in/out</a></li>
+								<li><a href="shipment.html">訂單查詢</a></li>
+								<li><a href="upload.html">上架商品</a></li>
+								<li><a href="takeoff.html">我的商品</a></li>
 								<li><a href="#">個人資料</a></li>
-                                <li><a href="#">聊天室</a></li>
+								<li><a href="chatroom.html">聊天室</a></li>
 							</ul>
 						</li>
 
@@ -102,11 +75,11 @@
 					<ul>
 						<li class="search">
 							<div class="input-group">
-						      <input type="text" placeholder="Search..">
-						      <span class="input-group-btn">
-						        <button class="btn btn-primary" type="button"><i class="icon-search"></i></button>
-						      </span>
-						    </div>
+								<input type="text" placeholder="Search..">
+								<span class="input-group-btn">
+								<button class="btn btn-primary" type="button"><i class="icon-search"></i></button>
+								</span>
+							</div>
 						</li>
 						<li class="shopping-cart"><a href="#" class="cart"><span><small>0</small><i class="icon-shopping-cart"></i></span></a></li>
 					</ul>
@@ -133,7 +106,6 @@
 	</header>
 
 	
-	
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -150,7 +122,6 @@
 	<script src="js/jquery.flexslider-min.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
-
 	</body>
 </html>
 
