check Is Login or not

--- a/chatroom.html
+++ b/chatroom.html
@@ -61,11 +61,11 @@
 							<a href="" id="logoName"></a>
 							<ul class="dropdown">
 								<li><a href="login.html" id="in_out">Sign in/out</a></li>
-								<li><a href="shipment.html">訂單查詢</a></li>
-								<li><a href="upload.html">上架商品</a></li>
-								<li><a href="takeoff.html">我的商品</a></li>
-								<li><a href="#">個人資料</a></li>
-								<li><a href="chatroom.html">聊天室</a></li>
+								<li><a href="shipment.html" id="check_in_out_1">訂單查詢</a></li>
+								<li><a href="upload.html" id="check_in_out_2">上架商品</a></li>
+								<li><a href="takeoff.html" id="check_in_out_3">我的商品</a></li>
+								<li><a href="#" id="check_in_out_4">個人資料</a></li>
+                                <li><a href="chatroom.html" id="check_in_out_5">聊天室</a></li>
 							</ul>
 						</li>
 
