showProductDetail(js&php)

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 		</div>
 	</header>
 	
-	<div id="fh5co-product">
+	<div id="fh5co-product" style="padding-top: 10px;">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading" style="margin-bottom: 50px;">
 					<span>Second Hand Product</span>
 					<p>購買前請三思，二手商品售出後無法退貨</p>
 				</div>
