--- a/single.html
+++ b/single.html
@@ -38,6 +38,7 @@
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<script src="script/index.js"></script>
+	<script src="script/showProductDetail.js"></script>
 
 	</head>
 	<body>
@@ -99,7 +100,7 @@
                             <div class="item">
                                 <div class="active text-center">
                                     <figure>
-                                        <img src="images/product-single-2.jpg" alt="user" style="width: calc(100%); height: 500px">
+                                        <img id="picture" src="images/product-single-2.jpg" alt="user" style="width: calc(100%); height: 500px">
                                     </figure>
                                 </div>
                             </div>
@@ -116,7 +117,7 @@
     
                         <div class="row animate-box">
                             <div class="col-md-8 text-center fh5co-heading" style="width: 100%; margin-bottom: 0;">
-                                <h2 style="margin: 0;">資工系大一用書-計算機概論2020</h2>
+                                <h2 style="margin: 0;" id="product_name">資工系大一用書-計算機概論2020</h2>
                                 <span class="price" style="font-size: 150%;">$350</span>
                             </div>
                         </div>
