--- a/upload.html
+++ b/upload.html
@@ -6,7 +6,8 @@
 	<title>upload</title>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <!-- BootStrap -->
+	<script src="script/upload.js"></script>
+	<!-- BootStrap -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -125,15 +126,15 @@
                                     <div class="container" style="display: flex;">
                                         <div class="feedback">
                                         <div class="rating">
-                                            <input type="radio" name="rating" id="rating-5">
+                                            <input type="radio" name="rating" id="rating-5" value="5">
                                             <label for="rating-5"></label>
-                                            <input type="radio" name="rating" id="rating-4">
+                                            <input type="radio" name="rating" id="rating-4" value="4">
                                             <label for="rating-4"></label>
-                                            <input type="radio" name="rating" id="rating-3">
+                                            <input type="radio" name="rating" id="rating-3" value="3">
                                             <label for="rating-3"></label>
-                                            <input type="radio" name="rating" id="rating-2">
+                                            <input type="radio" name="rating" id="rating-2" value="2">
                                             <label for="rating-2"></label>
-                                            <input type="radio" name="rating" id="rating-1">
+                                            <input type="radio" name="rating" id="rating-1" value="1">
                                             <label for="rating-1"></label>
                                         </div>
                                     </div>
@@ -171,8 +172,8 @@
                         <tr>
                             <td></td>
                             <td><div style="text-align: right;">
-                                <button class="button" value="">取消編輯</button>
-                                <button class="button" value="">確認上架/更改</button></div></td>
+                                <button id = "canBtn" class="button" value="">取消編輯</button>
+                                <button id = "conBtn" class="button" value="">確認上架/更改</button></div></td>
                         </tr>
                     </table>
                     
