--- a/takeorder_1.html
+++ b/takeorder_1.html
@@ -93,21 +93,7 @@
 			
 		</div>
 	</nav>
-    <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/sea.jpg); margin-bottom: 30px;">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Member centre</h1>
-							<h2>National Taiwan Ocean University</h2>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
+
     <div id="fh5co-contact">
 		<div class="container">
 			<div class="row">
@@ -128,7 +114,7 @@
 
 
 				<div class="col-md-8 animate-box" style="padding-left: 80px">
-                    <h2 id="title">賣家出貨／買家取貨</h2>
+                    <h2>賣家出貨／買家取貨</h2>
                     <table id ="shipment" style="margin-right: 0px;">
                         <tr>
                             <th>購買日期</th>
