統一前端(upload)風格

--- a/shipment.html
+++ b/shipment.html
@@ -113,10 +113,10 @@
 			<div class="row">
 				<div class="col-md-5 animate-box" style="width:fit-content;">
 					<div class="fh5co-contact-info">
-						<h3>Member Centre:</h3>
+						<h3 style="border-bottom: 1px solid rgba(1, 6, 101, 0.378);">Member Centre</h3>
 						<ul>
                             <li><a href="login.html" id="in_out">Sign in/out</a></li>
-                            <li><a href="shipment.html" id="check_in_out_1">訂單查詢</a></li>
+                            <li><a href="shipment.html" id="check_in_out_1" style="color:rgb(1, 6, 101);">訂單查詢</a></li>
                             <li><a href="upload.html" id="check_in_out_2">上架商品</a></li>
                             <li><a href="takeoff.html" id="check_in_out_3">我的商品</a></li>
                             <li><a href="#" id="check_in_out_4">個人資料</a></li>
@@ -127,7 +127,7 @@
 				</div>
 
 
-				<div class="col-md-8 animate-box" style="padding-left: 80px">
+				<div class="col-md-9 animate-box" style="padding-left: 80px">
                     <h2 id="title">賣家出貨／買家取貨</h2>
                     <table id ="shipment" style="margin-right: 0px;">
                         <tr>
