統一前端(takeoff)風格

--- a/upload.html
+++ b/upload.html
@@ -41,6 +41,8 @@
         <!-- Modernizr JS -->
         <script src="js/modernizr-2.6.2.min.js"></script>
         <script src="script/index.js"></script>   
+        <script src="script/upload.js"></script>   
+        <script src="script/uploadImage.js"></script>   
         
         <link rel="stylesheet" href="css/upload.css">
         
