--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
 					<p>購買前請三思，二手商品售出後無法退貨</p>
 				</div>
 			</div>
+			<div align="right" style="margin: 10px;">
+				商品排序：
+				<select name="display_order" id="display_order">
+					<option value="upload_1" selected>上架新->舊</option>
+					<option value="upload_2" >上架舊->新</option>
+					<option value="price_1">價錢小->大</option>
+					<option value="price_2">價錢大->小</option>
+				</select>
+			</div>
 			<div id="display">
 
 			</div>
