--- a/login.html
+++ b/login.html
@@ -116,9 +116,13 @@
                 <div class="col-md-6 text-center ">
                     <h1><b><font style="color: #000A6B">JOIN US</font></b></h1>
                     <p><input id="regName" name="userName" type="text" placeholder="使用者姓名 Username"></p>
+					<p><input id="regTrueName" name="userEmail" type="text" placeholder="電子郵件 E-mail"></p>
                     <p><input id="regEmail" name="userEmail" type="text" placeholder="電子郵件 E-mail"></p>
                     <p><input id="regPwd" name="userPwd" type="password" placeholder="密碼 Password"></p>
                     <p><input id="checkPwd" name="checkPwd" type="password" placeholder="確認密碼 Confirm password"></p>
+					<p><input id="regPhone" name="userEmail" type="text" placeholder="電子郵件 E-mail"></p>
+					<p align="left" style="font-size: 18px;">出貨方式：<input type="checkbox" class="returnMethod" id="return711" value="return711"> 7-Eleven <input type="checkbox" class="returnMethod" id="returnFamily" value="returnFamily"> 全家 <input type="checkbox" class="returnMethod" id="returnFace"
+						value="returnFace"> 面交 </p>
                     <p align="right"><button id="regSubmit" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">註冊</button></p>
                     <hr>
                 </div>
