--- a/upload.html
+++ b/upload.html
@@ -200,7 +200,7 @@
                             <td><input type="checkbox" class="payMethod" id="payPickUp" value="payPickUp"> 取貨付款 <input type="checkbox" class="payMethod" id="payRemit" value="payPickUp"> 匯款 </td>
                         </tr>
                         <tr>
-                            <td>退貨方式：</td>
+                            <td>出貨方式：</td>
                             <td><input type="checkbox" class="returnMethod" id="return711" value="return711"> 7-Eleven <input type="checkbox" class="returnMethod" id="returnFamily" value="returnFamily"> 全家 <input type="checkbox" class="returnMethod" id="returnFace"
                                     value="returnFace"> 面交 </td>
                         </tr>
