--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -37,7 +37,7 @@
         <script src="script/index.js"></script>   
         
     <link rel="stylesheet" href="css/shipment.css"> 
-        
+	<script src="script/shoppingcart.js"></script>  
 </head>
 
 <body>
@@ -118,7 +118,7 @@
                             <th>商品價錢</th>
                             <th></th>
                         </tr>
-                        <tr>                                     
+                        <!-- <tr>                                     
                             <td><input type="checkbox"></td>                  
                             <td><img  id="product" src="#"></td>                           
                             <td>商品A</td>                            
@@ -141,7 +141,7 @@
                             <td>number</td>                              
                             <td>price</td>
                             <td><button id="remove">移除</button></td>
-                        </tr>                       
+                        </tr>                        -->
                     </table>                    
                     <div class="form-group" style="margin-top: 20px; text-align: right;">
                         <button id="" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">繼續購物</button>
