--- a/takeorder_1.html
+++ b/takeorder_1.html
@@ -44,6 +44,7 @@
         
         <link rel="stylesheet" href="css/upload.css">
         <link rel="stylesheet" href="css/takeorder.css">
+		<script src="script/takeorder_1.js"></script> 
 
 </head>
 
@@ -135,7 +136,7 @@
                         <th>單價</th>
                         <th>小計</th>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <td>商品A</td>
                         <td>大</td>
                         <td>1</td>
@@ -148,7 +149,7 @@
                         <td>1</td>
                         <td>$150</td>
                         <th>$150</th>
-                    </tr>
+                    </tr> -->
                     
                 </table>
                 <div class="form-group" style="margin-top: 15px; text-align: right;">
