--- a/fixed_page.html
+++ b/fixed_page.html
@@ -36,6 +36,7 @@
     <script src="script/index.js"></script>
     <script src="script/showProductDetail.js"></script>
     <script src="script/recoed.js"></script>
+    <script src="script/addToCart.js"></script>
 
 	</head>
 	<body>
@@ -179,7 +180,7 @@
                                         <br><br>
                                         <p>
                                             <a href="#" class="btn btn-primary btn-outline ">Send mesage</a>
-                                            <a href="#" class="btn btn-primary btn-outline ">Add to Cart</a>
+                                            <a id="addToCart" href="#" class="btn btn-primary btn-outline ">Add to Cart</a>
                                         </p>
                             
                                     </div>
