--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -144,7 +144,7 @@
                         </tr>                        -->
                     </table>                    
                     <div class="form-group" style="margin-top: 20px; text-align: right;">
-                        <button id="" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">繼續購物</button>
+                        <button id="continue" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">繼續購物</button>
                         <button id="order" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">下單</button>
                     </div>
 			</div>
