上架競標or不二價

--- a/upload.html
+++ b/upload.html
@@ -185,14 +185,14 @@
                         <tr>
                             <td>商品價錢：</td>
                             <td><input type="text" id="productPrice" name="productPrice" placeholder="定價" style="width:20%; text-align: center;"> or
-                                <input type="text" id="productPrice" name="productPrice" placeholder="競標" style="width:20%; text-align: center;">
-                                <input type="text" id="productPrice" name="productPrice" placeholder="一刀" style="width:20%; text-align: center;">
+                                <input type="text" id="productBidPrice" name="productPrice" placeholder="競標" style="width:20%; text-align: center;">
+                                <input type="text" id="productBidOnce" name="productPrice" placeholder="一刀" style="width:20%; text-align: center;">
                             </td>
                         </tr>                                
                         <tr>
                             <td>競標時間:</td>
                             <td> 
-                                現在 ~ <input type="date" id="" name="" placeholder="">
+                                現在 ~ <input type="date" id="chosenDate" name="" placeholder="">
                             </td>
                         </tr>
                         <tr>
