--- a/memberInfo.html
+++ b/memberInfo.html
@@ -34,7 +34,8 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	
 	<link rel="stylesheet" href="css/login.css">
-        <script src="script/index.js"></script>   
+        <script src="script/index.js"></script>
+		<script src="script/memberInfo.js"></script>   
                 
 </head>
 
@@ -120,21 +121,21 @@
                     <h2 id="title">個人資料</h2>
 					<p>
 						<label>會員姓名:
-							<input type="name" name="" required size="30px">
+							<input id="cName" type="name" name="" required size="30px">
 						</label>
 					</p>
 					<p>
 						<label>會員信箱:
-							<input type="email" name="" required size="30px">
+							<input id="cEmail" type="email" name="" required size="30px">
 						</label>
 					</p>
 					<p>
 						<label>會員密碼:
-							<input type="password" name="" required size="30px">
+							<input id="cPassword" type="password" name="" required size="30px">
 						</label>
 					</p>
 					<div class="form-group" style="margin-top: 15px; text-align: center;">
-						<button id="" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">更新資訊</button>
+						<button id="changeInfo" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">更新資訊</button>
 					</div>
 				</div>
                 
