--- a/memberInfo.html
+++ b/memberInfo.html
@@ -35,6 +35,7 @@
 	
 	<link rel="stylesheet" href="css/login.css">
         <script src="script/index.js"></script>
+		<script src="script/sendMail.js"></script>
 		<script src="script/memberInfo.js"></script>   
                 
 </head>
