--- a/upload.html
+++ b/upload.html
@@ -99,7 +99,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Sign in or Join us</h1>
+							<h1>Member centre</h1>
 							<h2>National Taiwan Ocean University</h2>
 						</div>
 					</div>
