--- a/takeorder_3.html
+++ b/takeorder_3.html
@@ -136,7 +136,7 @@
                     <h2 id="title">完成訂購</h2>
 
                     <div id="FinishMethod" class="formlist">
-                        <p><input id="" name="" type="text" placeholder="匯款後五碼"></p>
+                        <p><input id="payment" name="" type="text" placeholder="匯款後五碼"></p>
                         <p>匯款紀錄截圖: <input type="file"> </p>
                                                     
                     </div>
