update shipment & putInCart

--- a/shipment.html
+++ b/shipment.html
@@ -172,7 +172,7 @@
                         <button type="button" value="confirmTakeOff" style="font-size: 20px;">更新資訊</button></div>
                     </div>-->
                     <div class="form-group" style="margin-top: 15px; text-align: right;">
-                        <button id="" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">更新資訊</button>
+                        <button id="reload" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">更新資訊</button>
                     </div>
 			</div>
 			
